<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_string" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/logout_string" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="200"
        android:title="@string/delete_deal" />

    <item
        android:id="@+id/help"
        android:orderInCategory="400"
        android:title="@string/help_string" />
</menu>